--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,25 @@
             android:textColor="@color/white"
             android:textSize="50dp" />
 
+        <TextView
+            android:id="@+id/tv_coord"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <Switch
+            android:id="@+id/sw_gps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:checked="false"
+            android:enabled="true"
+            android:text="Abrir por ubicación (Desactivado)"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
     </LinearLayout>
 
     <LinearLayout
