--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:background="#80000000"
+        android:paddingBottom="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -96,6 +97,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:visibility="invisible"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -106,6 +108,7 @@
             android:layout_weight="1"
             android:checked="false"
             android:enabled="true"
+            android:background="@drawable/rojo_switch"
             android:text="Abrir por ubicación (Desactivado)"
             android:textAlignment="center"
             android:textSize="20sp" />
